fix minor allignment & spacing issues

--- a/src/index.css
+++ b/src/index.css
@@ -491,8 +491,6 @@ select {
   }
 }
 
-/** DESTINATIONS  **/
-
 .underline-indicators {
   & > * {
     cursor: pointer;
@@ -501,6 +499,7 @@ select {
   }
 
   & li button {
+    background: transparent;
     border: 0;
   }
 
@@ -520,7 +519,7 @@ select {
   }
 }
 
-.tab-buttons {
+.tablist {
   --gap: 2.5rem;
 }
 
@@ -585,6 +584,10 @@ select {
   max-width: 50ch;
 }
 
+.grid-container.home h1 {
+  margin-inline: auto;
+}
+
 .grid-container.destination {
   grid-template-areas:
     "title"
@@ -614,6 +617,7 @@ select {
 
 .destination-meta {
   flex-direction: column;
+  align-items: center;
   border-top: 1px solid hsl(var(--clr-white) / 0.25);
   padding-top: 2.5rem;
   margin-top: 2.5rem;
@@ -653,6 +657,14 @@ select {
     padding-bottom: max(6rem, 20vh);
   }
 
+  .grid-container.home > *:first-child {
+    grid-column: 2;
+  }
+
+  .grid-container.home > *:last-child {
+    grid-column: 3;
+  }
+
   /** DESTINATION **/
   .destination.grid-container {
     grid-template-areas:
@@ -662,7 +674,7 @@ select {
 
     justify-content: start;
     align-content: start;
-    --container-gap: 8rem;
+    --container-gap: min(6rem, 5vw);
   }
 
   .grid-container.destination > img {
@@ -675,7 +687,7 @@ select {
   }
 
   .destination-meta {
-    --gap: 6rem;
+    --gap: max(4rem, 5vw);
     justify-content: flex-start;
   }
 }
